# os-controls

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  Color.h  DataTypes.h  DefineComponents.cmake  Doxyfile.in  FrameBufferObject.h  GLBuffer.cpp  OculusVR.cpp  Primitive.h  README.md  RenderBuffer.cpp  components.gitignore  foo  test_main.cpp
src/PreferencePane/: CMakeLists.txt  PreferencePane.h  PreferencePane.mm  ShortcutsPreferences.plist.in
src/Shortcuts/: ApplicationDelegate.h  ApplicationDelegate.mm  AssemblyInfo.cpp  CMakeLists.txt  ErrorDialogs.cpp  ErrorDialogs.h  MenubarController.h  MenubarController.mm  NativeUI.cpp  NativeUI.h  NativeUIMac.mm  NativeUIWin.cpp  NativeUIWin.h  NativeUIWin.resx  Resource.rc  Shortcuts.cpp  Shortcuts.h  Shortcuts.plist.in  SignShortcuts.cmake  Version.h.in  config.json  resource.h  uiAccess.manifest
src/ShortcutsHelper/: CMakeLists.txt  ShortcutsHelper.mm
src/SystemWipeRecognizer/: CMakeLists.txt  main.cpp  main2.cpp
src/VRIntro/: CMakeLists.txt
src/components/: CMakeLists.txt  Doxyfile.in  README.md  components.gitignore
src/config/: CMakeLists.txt  configwindow.cpp  configwindow.h  configwindow.ui  main.cpp
src/cursor/: CMakeLists.txt  CursorView.cpp  CursorView.h
src/desktop/: CMakeLists.txt  Screen.h  ScreenMac.mm  ScreenWin.cpp  VirtualScreenMac.h  VirtualScreenMac.mm  VirtualScreenWin.cpp  VirtualScreenWin.h
src/engine/: CMakeLists.txt
src/expose/: CMakeLists.txt  ExposeActivationStateMachine.cpp  ExposeActivationStateMachine.h  ExposeGroup.cpp  ExposeGroup.h  ExposeView.cpp  ExposeView.h  ExposeViewAccessManager.cpp  ExposeViewAccessManager.h  ExposeViewApp.cpp  ExposeViewApp.h  ExposeViewController.cpp  ExposeViewController.h  ExposeViewEvents.cpp  ExposeViewEvents.h  ExposeViewStateMachine.cpp  ExposeViewStateMachine.h  ExposeViewWindow.cpp  ExposeViewWindow.h
src/graphics/: CMakeLists.txt  Cursor.cpp  Cursor.h  CursorView.cpp  CursorView.h  ExposeActivationStateMachine.cpp  ExposeActivationStateMachine.h  ExposeControl.cpp  ExposeControl.h  ExposeView.cpp  ExposeView.h  ExposeViewAccessManager.cpp  ExposeViewWindow.cpp  ExposeViewWindow.h  GraphicsConfigs.h  GraphicsStateMachine.cpp  GraphicsStateMachine.h  MediaView.cpp  MediaView.h  MediaViewEventListener.h  MediaViewStateMachine.cpp  MediaViewStateMachine.h  MostRecent.h  RadialButton.cpp  RadialButton.h  RenderEngine.cpp  RenderEngine.h  RenderEngineNode.h  RenderFrame.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  State.h  Updatable.h  Vector.h  VolumeControl.cpp  VolumeControl.h  VolumeSliderView.cpp  VolumeSliderView.h  (+6 more)
src/hmdinterface/: CMakeLists.txt  HmdFactory.cpp  HmdFactory.h  IContext.h  IDevice.cpp  IDevice.h  IDeviceConfiguration.h  IException.h  IEyeConfiguration.h  IPose.h  IntermediateArray.h  MatrixComponentOrder.h
src/interaction/: CMakeLists.txt  CircleGestureTrigger.cpp  CircleGestureTrigger.h  ClawRotationRecognizer.cpp  ClawRotationRecognizer.h  CoordinateUtility.cpp  CoordinateUtility.h  ExposeView.cpp  ExposeView.h  ExposeViewAccessManager.cpp  ExposeViewAccessManager.h  ExposeViewController.cpp  ExposeViewController.h  ExposeViewProxy.cpp  ExposeViewProxy.h  ExposeViewStateMachine.cpp  ExposeViewStateMachine.h  FrameDeltaTimeRecognizer.cpp  FrameDeltaTimeRecognizer.h  FrameFragmenter.cpp  FrameFragmenter.h  GestureTriggerManifest.cpp  GestureTriggerManifest.h  HandActivationRecognizer.cpp  HandActivationRecognizer.h  HandCoordinatesDecorator.cpp  HandCoordinatesDecorator.h  HandDataCombiner.cpp  HandDataCombiner.h  HandEventListener.h  HandExistTrigger.cpp  HandExistTrigger.h  HandLocationRecognizer.cpp  HandLocationRecognizer.h  HandPinchRecognizer.cpp  HandPinchRecognizer.h  HandPointingDecorator.cpp  HandPointingDecorator.h  HandPoseRecognizer.cpp  HandPoseRecognizer.h  (+25 more)
src/mediaview/: CMakeLists.txt  MediaViewController.cpp  MediaViewController.h  MediaViewStateMachine.cpp  MediaViewStateMachine.h  VolumeSliderView.cpp  VolumeSliderView.h
src/oscontrol/: CMakeLists.txt  LeapInput.cpp  LeapInput.h  MainWindow.cpp  MainWindow.h  MediaController.h  MediaControllerMac.h  MediaControllerWin.cpp  MediaControllerWin.h  RenderingContext.cpp  RenderingContext.h  WindowingSystem.cpp  WindowingSystem.h  oscontrol.cpp  oscontrol.h  stdafx.h
src/oscontrols/: ApplicationDelegate.h  ApplicationDelegate.mm  AssemblyInfo.cpp  CMakeLists.txt  CursorController.cpp  CursorController.h  MediaMenuController.cpp  MediaMenuController.h  MenubarController.h  MenubarController.mm  NativeUI.cpp  NativeUI.h  NativeUIMac.mm  NativeUIWin.cpp  NativeUIWin.h  NativeUIWin.resx  Resource.rc  Resource.resx  Status.tiff  StatusItemView.h  StatusItemView.mm  Version.h.in  config.json  osControlConfigs.h  oscontrols.cpp  oscontrols.h  oscontrols.plist.in  stdafx.h
src/osinterface/: AudioVolumeController.cpp  AudioVolumeController.h  AudioVolumeControllerMac.cpp  AudioVolumeControllerMac.h  AudioVolumeControllerWin.cpp  AudioVolumeControllerWin.h  AudioVolumeInterfaceMac.cpp  CMakeLists.txt  CompositionEngine.cpp  CompositionEngine.h  CompositionEngineMac.cpp  CompositionEngineMac.h  CompositionEngineWin.cpp  CompositionEngineWin.h  DwmThumbnailWindow.cpp  DwmThumbnailWindow.h  DwmpApi.h  HtmlPageLauncher.cpp  HtmlPageLauncher.h  HtmlPageLauncherMac.h  HtmlPageLauncherMac.mm  HtmlPageLauncherWin.cpp  HtmlPageLauncherWin.h  KeepRenderWindowFullScreen.cpp  KeepRenderWindowFullScreen.h  LeapInput.cpp  LeapInput.h  LeapInputListener.h  MainWindow.cpp  MakesRenderWindowFullScreen.cpp  MakesRenderWindowFullScreen.h  MediaController.cpp  MediaController.h  MediaControllerMac.cpp  MediaControllerMac.h  MediaControllerWin.cpp  MediaInterfaceMac.cpp  MediaInterfaceMac.mm  OSApp.cpp  OSApp.h  (+75 more)
src/uievents/: AbstractVolumeControl.h  CMakeLists.txt  HandProperties.h  MediaViewEventListener.cpp  MediaViewEventListener.h  OSCDomain.h  ShortcutsConfigs.h  ShortcutsDomain.h  SystemMultimediaEventListener.h  Updatable.h  osControlConfigs.h
src/utility/: AutoLaunch.h  (+51 more)
temp_stub_app/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  StubApplication.cpp  StubApplication.h
(+319 files in other folders)
